apps/focalboard/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: focalboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: focalboard
  template:
    metadata:
      labels:
        app: focalboard
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: veirt.dev/node-pool
                    operator: In
                    values:
                      - vps
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "vps"
          effect: "NoSchedule"
      containers:
        - name: focalboard
          image: mattermost/focalboard:7.11.4
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data-volume
              mountPath: /opt/focalboard/data
              subPath: focalboard
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
