apps/focalboard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: focalboard-service
spec:
  selector:
    app: focalboard
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: webui
  type: ClusterIP
